--- a/src/ui/TodoForm/TodoForm.css
+++ b/src/ui/TodoForm/TodoForm.css
@@ -1,12 +1,13 @@
 form {
   width: 90%;
   max-width: 300px;
-  background-color: #fff;
+  /* background-color: #fff; */
   padding: 33px 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 label {
